# QtDraw

./: .buildinfo  LICENSE  MANIFEST.in  README.html  README.md  a.txt  genindex.html  objects.inv  py-modindex.html  pyproject.toml  qtdraw.md  search.html  searchindex.js  setup.cfg  todo.md
_modules/: index.html
_modules/qtdraw/: qt_draw.html  qt_draw_base.html
_modules/qtdraw/core/: basic_object.html  color_dialog.html  color_pixmap.html  dialog_about.html  dialog_preference.html  editable_widget.html  group_model.html  group_tab.html  group_view.html  line_edit.html  pixmap_converter.html  pyvista_widget.html  qt_logging.html  qtdraw_app.html  table_dialog.html  tree_item.html  tree_item_model.html  util.html  validator.html
_modules/qtdraw/multipie/: dialog_group.html  dialog_info.html  dialog_modulation.html  dialog_multipie.html  multipie_data.html  multipie_dialog.html  multipie_info_dialog.html  multipie_modulation_dialog.html  multipie_plot.html  multipie_util.html  plot_object.html  sub_group.html  tab_basis.html  tab_group.html  tab_object.html  util.html  util_multipie.html
_modules/qtdraw/parser/: converter.html  read_cif_vesta.html  read_material.html  util.html  util_parser.html  vesta.html  xsf.html
_modules/qtdraw/util/: basic_object.html  color_selector_util.html  latex_to_png.html  latex_to_svg.html  logging_util.html  pdf_viewer.html  qt_event_util.html  util.html  util_axis.html  util_str.html
_modules/qtdraw/widget/: color_selector_util.html  custom_widget.html  delegate.html  group_model.html  group_view.html  logging_util.html  mathjax.html  message_box.html  pdf_viewer.html  qt_event_util.html  tab_group_view.html  table_view.html  validator.html
docs/: API.md  README.md  _config.yml  _toc.yml  index.md  multipie.md  ver1.1.2.md  ver1.1.3.md  ver1.1.4.md
docs/_static/: custom.css
docs/src/: api.md  api_core.md  api_multipie.md  api_parser.md  api_script.md  api_summary.md  api_util.md  api_widget.md  change_log.md  class.md  developer.md  example.md  from_python.md  function_table.md  getting_started.md  install.md  object.md  overview.md  plot_api.md  sample.py  user_guide.md
docs/src/examples/: QtDraw.py  Si.vesta  background.py  background_s.py  color_pattern.qtdw  ex_load.py  ex_multi_draw.py  ex_plus_draw.py  ex_qt_draw.py  ex_qt_draw_base.py  ex_sample_plot.py  helimag.qtdw  icon.qtdw  isosurface.py  load.py  mp_Te.ipynb  mp_graphene.ipynb  multipie.ipynb  old_sample.qtdw  plus_panel.ui  pyvista_widget.ipynb  qtdraw.ipynb  sample.qtdw  sample_ver1.qtdw
others/: icon.ai
others/examples/: QtDraw.py  ex_load.py  ex_multi_draw.py  ex_plus_draw.py  ex_qt_draw.py  ex_qt_draw_base.py  ex_sample_plot.py
others/misc/: color_pattern.qtdw  icon.qtdw
others/source/: class.rst  conf.py  detail.rst  example.rst  index.rst
others/tests/: a.py  data.py  pyvista_qt_check.py  test_color_dialog.py  test_editable_widget.py  test_editor.py  test_from_jupyter.ipynb  test_group_tab.py  test_group_view.py  test_isosurface.py  test_latex_backend.py  test_line_edit.py  test_logging.py  test_mathjax.ipynb  test_mathjax.py  test_pdf_viewer.py  test_pixmap_converter.py  test_pyvista_widget.py  test_pyvistaqt.py  test_qtdraw.py  test_tab_group_view.py  test_table_dialog.py  test_table_view.py  test_tree_item.py  test_tree_item_model.py  test_util.py  test_util_str.py  test_validator.py  test_widget.py  test_window.py
others/tools/: create_function_table.py  create_group_list.py
qtdraw/: __init__.py  qt_draw.py  qt_draw_base.py
qtdraw/core/: basic_object.py  color_dialog.py  color_palette.py  color_pixmap.py  default_panel.ui  dialog_about.py  dialog_preference.py  editable_widget.py  group_model.py  group_panel.ui  group_tab.py  group_view.py  line_edit.py  pixmap_converter.py  pyvista_widget.py  pyvista_widget_setting.py  qt_logging.py  qtdraw.ui  qtdraw_app.py  qtdraw_info.py  setting.py  style.qss  table_dialog.py  tree_item.py  tree_item_model.py  util.py  validator.py
qtdraw/mathjax/: latex_to_svg.py  mathjax.py  test.ipynb  test.py
qtdraw/multipie/: dialog_group.py  dialog_group_info.py  dialog_info.py  dialog_modulation.py  dialog_multipie.py  info_dialog.py  multipie_data.py  multipie_dialog.py  multipie_group_list.py  multipie_info_dialog.py  multipie_modulation_dialog.py  multipie_plot.py  multipie_setting.py  multipie_util.py  plot_object.py  plugin_multipie.py  plugin_multipie_setting.py  setting.py  sub_group.py  tab_basis.py  tab_group.py  tab_object.py  util.py  util_multipie.py
qtdraw/multipie/old/: dialog_modulation.py  dialog_multipie.py  plugin_multipie.py
qtdraw/parser/: converter.py  data_group.py  element.py  read_cif.py  read_cif_vesta.py  read_material.py  util.py  util_parser.py  vesta.py  xsf.py
qtdraw/sandbox/: basic_object.py  color_palette.py  color_selector_util.py  converter.py  custom_widget.py  data_group.py  delegate.py  dialog_about.py  dialog_preference.py  element.py  group_model.py  group_view.py  logging_util.py  pyvista_widget.py  pyvista_widget_setting.py  qt_event_util.py  qtdraw_app.py  read_material.py  tab_group_view.py  table_view.py  util.py  util_axis.py  util_parser.py  validator.py  vesta.py  xsf.py
qtdraw/scripts/: conv_qtdraw2.py  conv_qtdraw3.py  qtdraw.py
qtdraw/util/: basic_object.py  color_selector_util.py  latex_to_png.py  latex_to_svg.py  logging_util.py  qt_event_util.py  util.py  util_axis.py  util_str.py
qtdraw/widget/: color_palette.py  color_selector_util.py  custom_widget.py  delegate.py  group_model.py  group_view.py  logging_util.py  mathjax.py  message_box.py  pdf_viewer.py  qt_event_util.py  tab_group_view.py  table_view.py  validator.py
src/: api.html  api_core.html  api_multipie.html  api_parser.html  api_script.html  api_summary.html  api_util.html  api_widget.html  change_log.html  class.html  detail.html  developer.html  example.html  from_python.html  function_table.html  getting_started.html  install.html  object.html  overview.html  plot_api.html  user_guide.html
src/examples/: mp_Te.html  mp_graphene.html  multipie.html  pyvista_widget.html  qtdraw.html
(+9 files in other folders)
