[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qtdraw"
dependencies = [
    "numpy",
    "Cython",
    "matplotlib",
    "PySide6",
    "pyvista",
    "pyvistaqt",
    "click",
    "black",
    "ipython",
    "pymatgen",
    "gcoreutils",
    "multipie",
]
dynamic = ["version"]
requires-python = ">=3.11"
authors = [
  { name="Hiroaki Kusunose", email="hiroaki.kusunose@gmail.com" },
]
description = "3D drawing tool for molecules and crystals based on Pyvista and PySide6."
readme = "docs/README.md"
keywords = ['pyvista', 'PySide6', 'multipie']
license = {text = "MIT"}
classifiers = [
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]

[project.urls]
Homepage = "https://github.com/CMT-MU/QtDraw"
Issues = "https://github.com/CMT-MU/QtDraw/issues"

[project.scripts]
"qtdraw" = "qtdraw.scripts.qtdraw:cmd"
"conv_qtdraw2" = "qtdraw.scripts.conv_qtdraw2:cmd"

[project.optional-dependencies]
dev = [
    "jupyter-book",
    "ghp-import",
]

[tool.setuptools.dynamic]
version = {attr = "qtdraw.__version__"}

[tool.setuptools.packages.find]
include = ['qtdraw', 'qtdraw.*']
exclude = ["build", "tests"]

[tool.black]
line-length = 130

[tool.build_sphinx]
source-dir = 'docs'
build-dir  = './docs/_build'
all_files  = 1

[tool.upload_sphinx]
upload-dir = 'docs/_build/html'
