[metadata]
name = qtdraw
author = Hiroaki Kusunose
author_email = hiroaki.kusunose@gmail.com
version = attr: qtdraw.__version__
url = https://github.com/CMT-MU/QtDraw
description = 3D drawing tool for molecules and crystals based on Pyvista and Qt.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pyvista, qtpy5
license = MIT

[options]
python_requires = >=3.8
install_requires =
    matplotlib
    seaborn
    pyqt5
    pyvista
    pyvistaqt
    click
    pymatgen>2023.7.17
    gcoreutils
packages = find:
include_package_data = True

[options.extras_require]
dev =
    sphinx
    sphinx-rtd-theme
    ipython
    multipie

[options.entry_points]
console_scripts =
    qtdraw = qtdraw.scripts.qtdraw:cmd
